Added new Sprite